--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,13 @@
         }
     ],
     "require": {
-        "php" : ">=7.0.0",
-        "laravel/framework": "5.5.*"
+        "php" : ">=7.1.3",
+        "laravel/framework": "5.6.*"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5",
-        "phpunit/phpunit": "^6.5",
-        "apigen/apigen": "^v2.8",
-        "squizlabs/php_codesniffer": "^3.2"
+        "orchestra/testbench": "^3.6",
+        "phpunit/phpunit": "^7.1",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "autoload": {
         "psr-4": {
